--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+   
 </head>
 <body id="page-top" class="politics_version">
 
@@ -135,7 +135,7 @@
                         <p style="text-align: justify;"> 
                             I'm a MERN stack developer, I create and maintain web applications.I pride myself on reliable communication with my client
                             . Studied BCA in calicut university, Born and raised in Calicut, India.Designing and Coding have been my passion since the days I started working with computers,
-                            ,I enjoy creating beautifully designed, intuitive and functional websites. seeking a challenging career opportunity to attain and sustain a responsible position, which is conducive to learn and grow at professional as well as personal level through 
+                            I enjoy creating beautifully designed, intuitive and functional websites. seeking a challenging career opportunity to attain and sustain a responsible position, which is conducive to learn and grow at professional as well as personal level through 
                             absolute commitment and leadership skills with a strong endeavor for team spirit.
                              You can find more about me and get in touch for a chat.
                             </p>
@@ -235,7 +235,7 @@
                 <h3>My Skills</h3>
                 <p style="text-align: justify;"> I have been self learning for the last few months from the university of Youtube and Google.
                     Everything moved so fast, I created two projects from scratch using node js with express, Mongo db as the database. I am good with 
-                    CSS style elements and i know how to make a perfect responsive website with help of Bootstrap.
+                    CSS style elements and I know how to make a perfect responsive website with help of Bootstrap.
                     To be a workoholic you should find that passion in your work. If you have that passion, you don't feel that pressure inside. 
                 </p>
             </div>
@@ -496,25 +496,25 @@
                 <div class="col-md-12">
                     <div class="contact_form">
                         <div id="message"></div>
-                        <form id="submit-form" action="" name="sentMessage">
+                        <form id="submit-form" action="" name="sentMessage" >
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
-										<input class="form-control" name="Name" id="name" type="text" placeholder="Your Name" data-validation-required-message="Please enter your name." required>
+										<input class="form-control" name="Name" id="name" type="text" placeholder="Your Name" data-validation-required-message="Please enter your name." >
 										<p class="help-block text-danger"></p>
 									</div>
 									<div class="form-group">
-										<input class="form-control" name="email" type="email" placeholder="Your Email" required>
+										<input class="form-control" id="email" name="email" type="email" placeholder="Your Email">
 										<p class="help-block text-danger"></p>
 									</div>
 									<div class="form-group">
-										<input class="form-control" name="Phone" id="phone" type="tel" pattern="[0-9]{10,}" title="Type 10 digit number" minlength="10" placeholder="Your phone number" data-validation-required-message="Please enter your phone number." required>
+										<input class="form-control" name="Phone" id="phone" type="tel"  placeholder="Your phone number" data-validation-required-message="Please enter your phone number." >
 										<p class="help-block text-danger"></p>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
-										<textarea class="form-control" name="message" id="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+										<textarea class="form-control" name="message" id="message" placeholder="Your Message" data-validation-required-message="Please enter a message."></textarea>
 										<p class="help-block text-danger"></p>
 									</div>
 								</div>
@@ -549,7 +549,23 @@
     </div><!-- end copyrights -->
 
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
-    <script>
+   
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script> -->
+
+    <!-- <script>
+   
+            $("submit-form").validate({
+                rules:{
+                    Name:{
+                        required:true
+                    }
+                }
+            })
+    
+    </script>  -->
+
+   <!-- <script>
+
         $("#submit-form").submit((e) => {
             e.preventDefault()
             $.ajax({
@@ -559,7 +575,7 @@
                 success: function (response) {
                     alert("Form submitted successfully")
                     window.location.reload()
-                    //window.location.href="https://google.com"
+                   //    window.location.href="https://google.com"
                 },
                 error: function (err) {
                     alert("Something Error")
@@ -567,7 +583,24 @@
                 }
             })
         })
-    </script>
+    </script>  -->
+
+  <!-- <script>
+$(function(){
+    $("#submit-form").validate({
+        rules:{
+            email:{
+                required:true
+            },
+            Name:{
+                required:true
+            }
+        }
+    })
+})
+
+  </script> -->
+
     <!-- ALL JS FILES -->
     <script src="js/all.js"></script>
 	<!-- Camera Slider -->
@@ -581,6 +614,7 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/jquery.vide.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+  <script src="js/validation.js"></script>
 </body>
 </html>
